--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-Hello world
+<!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <title>cs_nagu info</title>
+  <link href="css/reset.css" rel="stylesheet" type="text/css">
+  <link href="css/css.css" rel="stylesheet" type="text/css">
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-17765726-10"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-17765726-10');
+  </script>
+</head>
+
+<body>
+<header>
+  <h1>naguu.info</h1>
+</header>
+<nav>
+  <ul>
+    <li><a href="https://blog.naguu.info">blog</a></li> /
+    <li><a href="https://twitter.com/cs_nagu">twitter</a></li> /
+    <li><a href="https://github.com/csnagu">github</a></li>
+  </ul>
+</nav>
+
+<section>
+  <article>
+    <!-- <h1></h1> -->
+    <h2>自己紹介</h2>
+    <p>札幌で小中 → NITTC（情報工学科） → NITTC（専攻科)<br>
+        研究では脳波計測とその解析やっています。<br>
+        計測で使うツールはUnityやProcessing、脳波の解析にはRとPython</p>
+    <h2>興味</h2>
+    <p>QoLをほんの少しだけでも向上させるものを作りたい。<br>
+        研究で機械学習、Echo dotで自然言語処理に興味を持つ。<br>
+        好きな作品はクロノ・トリガーやロックマンエグゼ</p>
+    <h2>制作ブツ</h2>
+    <p>日報に書いた翌日のタスクをTodoistへ登録してくれるモノ<br>
+       暗号化されてるPARのコードを復号化するモノ<br>
+       HOME Wi-fiの通信量を可視化してくれるモノ </p>
+    <h2>プログラミング</h2>
+    <p>よく触れる言語は主に研究でR、趣味でPython。<br>
+       触った事があるのは Common Lisp/C/Java/PHP など。</p>
+    <h2>趣味その他</h2>
+  </article>
+</section>
+
+<footer>
+  <address>© cs_nagu </address>
+</footer>
+</body>
+</html>
