[add] ps2parページを追加

--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <ul>
     <li><a href="https://blog.naguu.info">blog</a></li> /
     <li><a href="https://twitter.com/cs_nagu">twitter</a></li> /
-    <li><a href="https://github.com/csnagu">github</a></li>
+    <li><a href="https://github.com/csnagu">github</a></li> /
+    <li><a href="https://csnagu.github.io/ps2par.html"></a></li>
   </ul>
 </nav>
 
