--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li><a href="https://blog.naguu.info">blog</a></li> /
     <li><a href="https://twitter.com/cs_nagu">twitter</a></li> /
     <li><a href="https://github.com/csnagu">github</a></li> /
-    <li><a href="https://csnagu.github.io/ps2par.html"></a></li>
+    <li><a href="https://csnagu.github.io/ps2par.html">ps2par</a></li>
   </ul>
 </nav>
 
