[update] ps2par周りの表示を変更

--- a/index.html
+++ b/index.html
@@ -34,22 +34,28 @@
 <section>
   <article>
     <!-- <h1></h1> -->
-    <h2>自己紹介</h2>
-    <p>札幌で小中 → NITTC（情報工学科） → NITTC（専攻科)<br>
-        研究では脳波計測とその解析やっています。<br>
-        計測で使うツールはUnityやProcessing、脳波の解析にはRとPython</p>
-    <h2>興味</h2>
-    <p>QoLをほんの少しだけでも向上させるものを作りたい。<br>
-        研究で機械学習、Echo dotで自然言語処理に興味を持つ。<br>
-        好きな作品はクロノ・トリガーやロックマンエグゼ</p>
-    <h2>制作ブツ</h2>
-    <p>日報に書いた翌日のタスクをTodoistへ登録してくれるモノ<br>
-       暗号化されてるPARのコードを復号化するモノ<br>
-       HOME Wi-fiの通信量を可視化してくれるモノ </p>
-    <h2>プログラミング</h2>
-    <p>よく触れる言語は主に研究でR、趣味でPython。<br>
-       触った事があるのは Common Lisp/C/Java/PHP など。</p>
-    <h2>趣味その他</h2>
+    <h2>Who</h2>
+    <p>
+    Web系の企業に務めています。<br>
+    ロックマンエグゼが大好き。<br>
+    飽き性なのでいろいろなことが広く浅い。深ぼっていこうな。
+    </p>
+
+    <h2>Interest</h2>
+    <p>
+    QoLを向上させるものを作りたい。<br>
+    機械学習やニューロサイエンスに興味があります。<br>
+    </p>
+
+    <h2>Work</h2>
+    <p>
+    暗号化されてるPARのコードを復号化する<a href="ps2par">Webサービス</a><br>
+    AWS IoTボタンを利用した進捗ボタン
+    </p>
+
+    <h2>Language</h2>
+    <p>日本語とPython。</p>
+    <p>最近英語を鍛えようとしている</p>
   </article>
 </section>
 
