--- a/blog.html
+++ b/blog.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta http-equiv="refresh" content="60; URL='https://naguu.info/ps2par'" />
+
+
   <title>cs_nagu info</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
@@ -27,7 +30,8 @@
     <p>
     PCSX2 - PARコード（チートコード）コンバータは <a href="https://naguu.info/ps2par">こちら</a>。<br>
     ご覧のページは7月中に消滅予定のため、必要な方はリンク先をブックマークへの登録もしくは、既存ブックマークの更新をお願いします。<br>
-    リンク頂いているサイト様には申し訳ありませんが、リンク修正していただければと思います。
+    リンク頂いているサイト様には申し訳ありませんが、リンク修正していただければと思います。<br><br>
+    このページは60秒経過すると自動的に <a href="https://naguu.info/ps2par">https://naguu.info</a> へ転送されます。
   </article>
 </section>
 
