[update] title要素がすべて同じであったため、それぞれ個別のtitle要素へ変更した

--- a/blog.html
+++ b/blog.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="refresh" content="60; URL='https://naguu.info/ps2par'" />
-
-
-  <title>cs_nagu info</title>
+  <title>cs_nagu info - blog移転のお知らせ</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
 </head>
@@ -26,7 +24,7 @@
 
 <section>
   <article>
-    <h2>ブログ移行のお知らせ</h2>
+    <h2>ブログ移転のお知らせ</h2>
     <p>
     PCSX2 - PARコード（チートコード）コンバータは <a href="https://naguu.info/ps2par">こちら</a>。<br>
     ご覧のページは7月中に消滅予定のため、必要な方はリンク先をブックマークへの登録もしくは、既存ブックマークの更新をお願いします。<br>
