--- a/ps2par.html
+++ b/ps2par.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>cs_nagu info</title>
+    <title>cs_nagu info - ps2par</title>
     <link href="css/reset.css" rel="stylesheet" type="text/css">
     <link href="css/css.css" rel="stylesheet" type="text/css">
 
