[Update] 文言の修正

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <h2>Interest</h2>
     <p>
     QoLを向上させるものを作りたい。<br>
-    機械学習やニューロサイエンスに興味があります。<br>
+    深層学習で画像生成するアレやニューロサイエンスに興味があります。<br>
     </p>
 
     <h2>Work</h2>
@@ -60,7 +60,7 @@
 </section>
 
 <section>
-  <p>contributions...(Not only GitHub's Contributions)</p>
+  <p>activity log...</p>
       <iframe id="iframe" src="contrib.html" frameborder="0" width=100% height="250px" scrolling=no></iframe>
   <script>
       var myIframe = document.getElementById('iframe');
