[Fix] herokuにおいたapiサーバからcontribのjsonを獲得する

--- a/contrib.html
+++ b/contrib.html
@@ -12,7 +12,7 @@
 <body>
   <div class="container"></div>
 
-  <script src="contributions.json"></script>
+  <script src="https://nagu-lawn-api.herokuapp.com/lawn"></script>
   <script type="text/javascript">
     var now = moment().endOf('day').toDate();
     var yearAgo = moment().startOf('day').subtract(1, 'year').toDate();
