--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>cs_nagu info</title>
   <link href="css/reset.css" rel="stylesheet" type="text/css">
   <link href="css/css.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" type="text/css" href="css/calendar-heatmap.css">
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-17765726-10"></script>
@@ -50,8 +51,8 @@
     <h2>Work</h2>
     <p>
     暗号化されてるPARのコードを復号化する<a href="ps2par">Webサービス</a><br>
-    AWS IoTボタンを利用した進捗ボタン
-    進捗ボタンと対応したGitHubの草風なContributions
+    AWS IoTボタンを利用した進捗ボタン<br>
+    進捗ボタンと対応したGitHubの草風なactivity log
     </p>
 
     <h2>Language</h2>
@@ -61,7 +62,7 @@
 
 <section>
   <p>activity log...</p>
-      <iframe id="iframe" src="contrib.html" frameborder="0" width=100% height="250px" scrolling=no></iframe>
+      <iframe id="iframe" src="contrib.html" frameborder="0" width=100% height="200px" scrolling=no></iframe>
   <script>
       var myIframe = document.getElementById('iframe');
       myIframe.onload = function () {
@@ -69,7 +70,7 @@
       }
   </script>
 
-  </section>
+</section>
 
 
 <footer>
