--- a/ps2par.html
+++ b/ps2par.html
@@ -92,17 +92,51 @@
         /><br />
         <p>変換結果はpnachファイルにコピー</p>
       </article>
+
+      <!-- Google　AdSense -->
+      <div class="ads">
+        <div class="adleft">
+          <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+          ></script>
+          <!-- squarex2 -->
+          <ins
+            class="adsbygoogle"
+            style="display: block;"
+            data-ad-client="ca-pub-1361485893730260"
+            data-ad-slot="5217294476"
+            data-ad-format="auto"
+            data-full-width-responsive="true"
+          ></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
+        <div class="adright">
+          <script
+            async
+            src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+          ></script>
+          <!-- squarex2 -->
+          <ins
+            class="adsbygoogle"
+            style="display: block;"
+            data-ad-client="ca-pub-1361485893730260"
+            data-ad-slot="5217294476"
+            data-ad-format="auto"
+            data-full-width-responsive="true"
+          ></ins>
+          <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+          </script>
+        </div>
+        <hr class="clear" />
+      </div>
     </section>
 
     <footer>
       <address>© cs_nagu</address>
     </footer>
-
-    <!-- Google　AdSense -->
-    <script
-      data-ad-client="ca-pub-1361485893730260"
-      async
-      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
-    ></script>
   </body>
 </html>
