--- a/ps2par.html
+++ b/ps2par.html
@@ -10,6 +10,13 @@
     <link href="css/reset.css" rel="stylesheet" type="text/css" />
     <link href="css/css.css" rel="stylesheet" type="text/css" />
 
+    <!-- Google Adsense  -->
+    <script
+      data-ad-client="ca-pub-1361485893730260"
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
